# nanogpt-lab

./: .dockerignore  .env.example  .gitattributes  .gitignore  ARCHITECTURE.md  Dockerfile  INTERVIEW.md  LICENSE  Makefile  README.md  app.py  pyproject.toml  requirements-demo.txt  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
checkpoints/: best.pt
config/: ablation.yaml  full.yaml  smoke.yaml
src/nanogpt_lab/: __init__.py  ablation.py  config.py  evaluate.py  logging_setup.py  train.py
src/nanogpt_lab/data/: __init__.py  dataset.py  tokenizer.py
src/nanogpt_lab/model/: __init__.py  attention.py  generate.py  layers.py  rope.py  transformer.py
tests/: _helpers.py  conftest.py  test_attention.py  test_data.py  test_evaluate.py  test_generate.py  test_kv_cache.py  test_model.py  test_rope.py  test_tokenizer.py
